@startuml

title __ANDROIDASSIGNMENTS's Class Diagram__\n

  namespace com.example.androidassignments {
    class com.example.androidassignments.ChatWindow {
        ~ msgs : ArrayList<String>
        # onCreate()
    }
  }
  

  namespace com.example.androidassignments {
    class com.example.androidassignments.ChatWindow.ChatAdapter {
        + ChatAdapter()
        + getCount()
        + getItem()
        + getView()
    }
  }
  

  namespace com.example.androidassignments {
    class com.example.androidassignments.ListItemsActivity {
        {static} # ACTIVITY_NAME : String
        {static} - REQUEST_CAPTURE_IMAGE : int
        # onActivityResult()
        # onCreate()
        # onDestroy()
        # onPause()
        # onResume()
        # onStart()
        # onStop()
    }
  }
  

  namespace com.example.androidassignments {
    class com.example.androidassignments.LoginActivity {
        {static} # ACTIVITY_NAME : String
        # onCreate()
        # onDestroy()
        # onPause()
        # onResume()
        # onStart()
        # onStop()
    }
  }
  

  namespace com.example.androidassignments {
    class com.example.androidassignments.MainActivity {
        {static} # ACTIVITY_NAME : String
        # onActivityResult()
        # onCreate()
        # onDestroy()
        # onPause()
        # onResume()
        # onStart()
        # onStop()
    }
  }
  

  com.example.androidassignments.ChatWindow -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.androidassignments.ChatWindow +-down- com.example.androidassignments.ChatWindow.ChatAdapter
  com.example.androidassignments.ChatWindow.ChatAdapter -up-|> android.widget.ArrayAdapter
  com.example.androidassignments.ListItemsActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.androidassignments.LoginActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.androidassignments.MainActivity -up-|> android.app.Activity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
